<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Video Ultimate</string>
    <string name="widget_name" translatable="false">Video Ultimate</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="other">Other</string>
    <string name="sortby">Sort by…</string>
    <string name="sortby_name">Name</string>
    <string name="sortby_length">Length</string>
    <string name="searchable_hint">Search…</string>
    <string name="history">History</string>
    <string name="rate_for_us">Rate 5 Stars for us</string>
    <string name="rate_tips">Dear user, your 5 stars ratings will encourage us to better improve the product, and provide you the most quality products. Best wishes.</string>
    <string name="rate_ok">Rate Now</string>
    <string name="rate_cancel">Later</string>
    <plurals name="search_found_results_quantity">
        <item quantity="one">%d result found</item>
        <item quantity="other">%d results found</item>
    </plurals>
    <string name="play">Play</string>
    <string name="play_from_start">Play from start</string>
    <string name="play_as_audio">Play as audio</string>
    <string name="play_as_video">Play as video</string>
    <string name="append">Append</string>
    <string name="play_all">Play all</string>
    <string name="append_all">Append all</string>
    <string name="last_playlist">Last playlist</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="set_song">Set as ringtone</string>
    <string name="info">Information</string>
    <string name="confirm_delete">Delete the file \'%1$s\'?</string>
    <string name="ringtone_set">The file \'%1$s\' was set as the ringtone.</string>
    <string name="ringtone_error">An error occurred while setting the ringtone.</string>
    <string name="pause">Pause</string>
    <string name="not_show_again">Don\'t show this message again.</string>
    <string name="beta_warning">This is a beta version.\n\nThis version is NOT STABLE!\n\nDo NOT use, unless you know what you are doing.\n\nIt might kill your kitten and destroy your house.\nUse it at your own risk.\n\nHave Fun! :)</string>
    <string name="info_title">Video Ultimate</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="unknown_album">Unknown Album</string>
    <string name="unknown_genre">Unknown Genre</string>
    <string name="songs">Songs</string>
    <plurals name="songs_quantity">
        <item quantity="one">1 song</item>
        <item quantity="other">%d songs</item>
    </plurals>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <plurals name="albums_quantity">
        <item quantity="one">1 album</item>
        <item quantity="other">%d albums</item>
    </plurals>
    <plurals name="subfolders_quantity">
        <item quantity="one">1 subfolder</item>
        <item quantity="other">%d subfolders</item>
    </plurals>
    <plurals name="mediafiles_quantity">
        <item quantity="one">1 media file</item>
        <item quantity="other">%d media files</item>
    </plurals>
    <plurals name="videos_quantity">
        <item quantity="one">1 video</item>
        <item quantity="other">%d videos</item>
    </plurals>
    <string name="internal_memory">Internal memory</string>
    <string name="parent_folder">Up to parent folder</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="equalizer">Equalizer</string>
    <string name="all_albums">All albums</string>
    <string name="genres">Genres</string>
    <string name="playlists">Playlists</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="directory">Directory</string>
    <string name="directories">Directories</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait…</string>
    <string name="nomedia">No media files found, please transfer some files to your device or adjust your preferences.</string>
    <string name="mediafiles">Media files</string>
    <string name="notavailable">not available</string>
    <string name="nosubdirectory">No subdirectories.</string>
    <string name="nohistory">You have no playback history yet.</string>
    <string name="validation">Are you sure?</string>
    <string name="cover_art">Cover art</string>
    <string name="shuffle">Shuffle</string>
    <string name="repeat">Repeat none/single/all</string>
    <string name="previous">Previous</string>
    <string name="stop">Stop</string>
    <string name="next">Next</string>
    <string name="locked">Locked</string>
    <string name="unlocked">Unlocked</string>
    <string name="surface_best_fit">Best fit</string>
    <string name="surface_fit_horizontal">Fit horizontal</string>
    <string name="surface_fit_vertical">Fit vertical</string>
    <string name="surface_fill">Fill</string>
    <string name="surface_original">Center</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="unseekable_stream">Unseekable stream</string>
    <string name="refresh">Refresh</string>
    <string name="track_audio">Audio track</string>
    <string name="track_video">Video track</string>
    <string name="track_text">Subtitles track</string>
    <string name="track_unknown">Unknown track</string>
    <string name="track_codec_info">Codec: %1$s\n</string>
    <string name="track_language_info">Language: %1$s\n</string>
    <string name="volume">Volume</string>
    <string name="brightness">Brightness</string>
    <plurals name="track_channels_info_quantity">
        <item quantity="one">1 channel\n</item>
        <item quantity="other">%1$d channels\n</item>
    </plurals>
    <string name="track_samplerate_info">Sample rate: %1$d Hz\n</string>
    <string name="track_resolution_info">Resolution: %1$dx%2$d\n</string>
    <string name="track_framerate_info">Frame rate: %1$.3f\n</string>
    <string name="tools">Tools</string>
    <string name="playback_speed">Playback speed</string>
    <string name="sleep_title">Sleep timer</string>
    <string name="sleep_cancel">Cancel sleep timer</string>
    <string name="jump_to_time">Jump to Time</string>
    <string name="subtitle_label">Add subtitle file</string>
    <string name="subtitle_select">Select subtitle file</string>
    <string name="no_file_picker_found">No file picker was found on the system.</string>
    <string name="open">Open</string>
    <string name="open_mrl">Open MRL</string>
    <string name="open_mrl_dialog_title">Open network stream</string>
    <string name="open_mrl_dialog_msg">Enter network MRL: e.g. http://, mms:// or rtsp://</string>
    <string name="error_not_compatible">Sorry, your device is currently not supported by this version of Video Ultimate for Android™.</string>
    <string name="error_problem">Sorry, Video Ultimate for Android had a problem loading and had to close.</string>
    <string name="error_message_is">The error message is (please mention this when debugging):\n</string>
    <string name="empty" translatable="false"></string>
    <string name="time_0" translatable="false">0:00</string>
    <string name="speed_placeholder" translatable="false">1.00x</string>
    <string name="load_1_period" translatable="false">.</string>
    <string name="load_2_period" translatable="false">..</string>
    <string name="load_3_period" translatable="false">...</string>
    <string name="colon" translatable="false">:</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">&#8722;</string>
    <string name="encountered_error_title">Playback error</string>
    <string name="encountered_error_message">Video Ultimate encountered an error with this media.\nPlease try refreshing the media library.</string>
    <string name="invalid_location">The location %1$s cannot be played</string>
    <string name="search">Search</string>
    <string name="search_history">Search history</string>
    <string name="hardware_acceleration_error_title">HW acceleration error</string>
    <string name="hardware_acceleration_error_message">An error occured with hardware acceleration. Would you like to disable it and try again?</string>
    <string name="app_name_full">Video Ultimate for Android™</string>
    <string name="licence">License</string>
    <string name="revision">Revision</string>
    <string name="about">About</string>
    <string name="about_text">Video Ultimate for Android™ is a port of VLC media player, the popular open source media player. The Android™ version can read most files and network streams.</string>
    <string name="compiled_by">This version of VLC is compiled by:</string>
    <string name="vlc_authors">VLC Authors.</string>
    <string name="about_link" translatable="false">        &lt;a href=&quot;http://www.videolan.org/vlc/&quot;&gt;http://www.videolan.org/vlc/&lt;/a&gt;</string>
    <string name="about_copyright" translatable="false">Copyleft &#169; 1996&#8211;2014 by VideoLAN.\n</string>
    <string name="authors" translatable="false">Edward&#160;Wang, Sébastien&#160;Toque, Adrien&#160;Maglo, Jean-Baptiste&#160;Kempf, Ludovic&#160;Fauvet, Rafaël&#160;Carré, Alexandre&#160;Perraud, Michael&#160;Merg, Martin&#160;Storsjö, Rémi&#160;Duraffort, Dominique&#160;Martinet, Jean-Philippe&#160;André, Felix&#160;Abecassis, Christoph&#160;Miebach, Hugo&#160;Beauzée-Luyssen, Felix&#160;Paul&#160;Kühne, John&#160;Mooring, Pavol&#160;Rusnak, Rohit&#160;Yadav, Tanguy&#160;Pruvot, Thomas&#160;Clavier, Asad&#160;Mehmood, Garret&#160;Kelly, Philipp&#160;Dreimann, Walter&#160;Heck.</string>
    <string name="preferences">Preferences</string>
    <string name="general_prefs_category">General</string>
    <string name="directories_summary">Select directories to include in the media library</string>
    <string name="add_custom_path">Add a custom path</string>
    <string name="add_custom_path_description">Enter additional custom directory to scan:</string>
    <string name="remove_custom_path">Remove custom path</string>
    <string name="hardware_acceleration">Hardware Acceleration</string>
    <string name="hardware_acceleration_summary">Disabled: better stability.\nDecoding: may improve performance.\nFull: may improve performance further.</string>
    <string name="hardware_acceleration_disabled">Disabled</string>
    <string name="hardware_acceleration_decoding">Decoding acceleration</string>
    <string name="hardware_acceleration_full">Full acceleration</string>
    <string name="automatic">Automatic</string>
    <string name="screen_orientation">Video screen orientation</string>
    <string name="screen_orientation_sensor">Automatic (sensor)</string>
    <string name="screen_orientation_start_lock">Locked at start</string>
    <string name="screen_orientation_portrait">Portrait</string>
    <string name="screen_orientation_landscape">Landscape</string>
    <string name="screen_orientation_reverse_portrait">Reverse portrait</string>
    <string name="screen_orientation_reverse_landscape">Reverse landscape</string>
    <string name="enable_black_theme">Enable the black theme</string>
    <string name="enable_black_theme_summary">Change the interface colours for better comfort in low light environments.</string>
    <string name="subtitle_text_encoding">Subtitle text encoding</string>
    <string name="extra_prefs_category">Extra settings</string>
    <string name="interface_prefs_category">Interface</string>
    <string name="enable_brightness_gesture">Enable brightness gesture</string>
    <string name="enable_brightness_gesture_summary">Control brightness by gesture during video playback</string>
    <string name="enable_headset_detection">Detect headset</string>
</resources>